--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,9 @@ name = "pypi"
 flask = "==2.3.3"
 crawler-wadefirsttest = {editable = true, path = "."}
 celery = "==5.5.0"
+pandas = "*"
+requests = "*"
+sqlalchemy = "*"
 
 [dev-packages]
 
