--- a/docker-compose-worker-network.yml
+++ b/docker-compose-worker-network.yml
@@ -21,7 +21,7 @@ services:
     # 啟動容器後執行的命令，這裡是啟動 Celery worker，指定 app 為 crawler.worker，設定日誌等級為 info，
     # 使用主機名稱當作 worker 名稱（%h），並將此 worker 加入名為 "tpex" 的任務佇列 (queue)
 
-    restart: always  # 若容器停止或崩潰，自動重新啟動
+    # restart: always  # 若容器停止或崩潰，自動重新啟動
     environment:
       - TZ=Asia/Taipei  # 設定時區為台北（UTC+8）
     networks:
